Bug 153858 - Collapse when you delete the table used for chart data when the mouse is moving.
Summary: Collapse when you delete the table used for chart data when the mouse is moving.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: Chart Crash
  Show dependency treegraph
 
Reported: 2023-02-27 14:09 UTC by NISZ LibreOffice Team
Modified: 2023-03-07 16:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test file (18.17 KB, application/vnd.oasis.opendocument.text)
2023-02-27 14:10 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-02-27 14:09:43 UTC
Description:
Collapse when you delete the entire table used for the chart data while the mouse is moving.

Steps to Reproduce:
1: Create a table with random data
2: Create a chart from it.
3: Delete the table.
4: Double-click on the chart while moving the mouse.

Actual Results:
The system crashes.

Expected Results:
There is no crash.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a235634ca5761aa4b330ebf7e3a2083b7db1606
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-02-27 14:10:04 UTC
Created attachment 185614 [details]
Test file
Comment 2 Commit Notification 2023-02-27 15:23:28 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4f2dcc4bc70c3602e2612dab611b610410637920

tdf#153858 sw: crash fix for chart with deleted data table

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-03-07 16:50:05 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/78373e81c79a8afe67ffe3ac84aef5649fcf489a

tdf#153858 sw: crash fix for chart with deleted data table

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.