tdf#153858 sw: crash fix for chart with deleted data table

Using mouse, e.g. simply moving the mouse pointer
during editing a chart with a deleted data table
crashed Writer immediately.

Follow-up to commit 5b9855acc7fa6d1e4a5f53ff0bc47e1dd4729827
"tdf#132714 sw: fix crash at table row deletion associated
to a chart".

Change-Id: I6d89eabc84565c548e2d9ded922789d623367ce4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147882
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4f2dcc4bc70c3602e2612dab611b610410637920)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147898
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>